# scloud-dns

./: .dockerignore  .gitignore  COVERAGE.md  Cargo.toml  Dockerfile  README.md  coverage.json  coverage_report.py  sonar-project.properties  test_req.ps1  update_readme_coverage.sh
.github/workflows/: build.yml  coverage.yml  deploy.yml
config/: config.json
k3s/: scloud-dns.yaml
src/: config.rs  main.rs
src/dns/: mod.rs  q_class.rs  q_name.rs  q_type.rs
src/dns/cache/: mod.rs
src/dns/packet/: mod.rs
src/dns/packet/additional/: mod.rs
src/dns/packet/answer/: mod.rs
src/dns/packet/authority/: mod.rs
src/dns/packet/header/: mod.rs
src/dns/packet/question/: mod.rs  qclass.rs
src/dns/records/: mod.rs  q_class.rs  q_name.rs  q_type.rs
src/dns/resolver/: mod.rs  stress_test.rs
src/dns/resolver/stub/: mod.rs
src/dns/tests/: config.rs  mod.rs  q_class.rs  q_name.rs  q_type.rs  stress_test.rs
src/dns/tests/packet/: mod.rs
src/dns/tests/packet/answer/: mod.rs
src/dns/tests/packet/authority/: mod.rs
src/dns/tests/packet/header/: mod.rs
src/dns/tests/packet/question/: mod.rs
src/dns/tests/records/: mod.rs  q_class.rs  q_name.rs  q_type.rs  qclass.rs
src/dns/tests/resolver/: mod.rs  stress_test.rs
src/dns/tests/resolver/stub/: mod.rs
src/dns/tests/zones/: mod.rs  zone_parser.rs
src/dns/zones/: mod.rs  zone_parser.rs
src/exceptions/: mod.rs
src/exceptions/tests/: mod.rs
src/threads/: mod.rs  queue.rs  rabbit_mq.rs  task.rs
src/threads/linux/: mod.rs  priority.rs
src/threads/macos/: mod.rs  priority.rs
src/threads/others/: mod.rs  priority.rs
src/threads/tests/: mod.rs
src/threads/windows/: mod.rs  priority.rs  queue.rs
src/threads/workers/: decoder.rs  listener.rs  metrics.rs  mod.rs  query_dispatcher.rs  resolver.rs
src/ui/: mod.rs
src/utils/: logging.rs  mod.rs  time.rs  uuid.rs
src/utils/tests/: logging.rs  mod.rs  time.rs  uuid.rs
src/workers/: manager.rs  mod.rs  queue.rs  reply_registry.rs  task.rs
src/workers/manager/: channels_generation.rs  mod.rs
src/workers/tests/: mod.rs
src/workers/tests/types/: listener.rs  metrics.rs  mod.rs
src/workers/types/: cache_janitor.rs  cache_lookup.rs  cache_writer.rs  decoder.rs  doh_acceptor.rs  encoder.rs  listener.rs  metrics.rs  mod.rs  query_dispatcher.rs  resolver.rs  sender.rs  tcp_acceptor.rs  zone_manager.rs
zones/: nihilist.moe.zone
