[package]
name = "SCloudDNS"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = "0.26"
strum_macros = "0.26"
rand = "0.9.2"
anyhow = "1.0.100"
tempfile = "3.23.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

nix = { version = "0.31.1", features = ["process", "user"] }
libc = "0.2.180"

uuid = { version = "1.20.0", features = ["v4", "serde"] }

futures-util = "0.3.31"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "winbase"] }