[package]
name = "scloud-dns"
version = "0.2.3"
edition = "2024"

[[bin]]
name = "dns_stress_test"
path = "src/bin/dns_stress_test.rs"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
strum = "0.26"
strum_macros = "0.26"
rand = "0.9.2"
anyhow = "1.0.100"
tempfile = "3.23.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

uuid = { version = "1.20.0", features = ["v4", "serde"] }

futures-util = "0.3.31"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "macros", "net", "sync", "time", "test-util"] }
reqwest = { version = "0.12", features = ["json"] }
bytes = { version = "1.11.1", features = ["serde"] }
once_cell = "1.21.3"
socket2 = "0.6.2"

hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"
dashmap = "6"
base64 = "0.22"

[dev-dependencies]
wiremock = "0.6"